test/corpus/statements.txt
================================================================================
Prim
================================================================================

\p{hello}

--------------------------------------------------------------------------------

(source_file
  (head_node
    (prim
      (p
        (textual_expr
          (textual_node
            (text)))))))

================================================================================
Date
================================================================================

\date{2023-12-25}

--------------------------------------------------------------------------------

(source_file
  (head_node
    (date)))

================================================================================
Title
================================================================================

\title{My Title}

--------------------------------------------------------------------------------

(source_file
  (head_node
    (title
      (textual_expr
        (textual_node
          (text))
        (textual_node
          (whitespace))
        (textual_node
          (text))))))

================================================================================
Transclusion
================================================================================

\transclude{nvm-0002}

--------------------------------------------------------------------------------

(source_file
  (head_node
    (transclude
      (wstext
        (ws_or_text
          (text))))))

================================================================================
Paragraph
================================================================================

\p{
  ##{a b}
  #{a b}
}

--------------------------------------------------------------------------------

(source_file
  (head_node
    (prim
      (p
        (textual_expr
          (textual_node
            (whitespace))
          (textual_node
            (head_node
              (display_math
                (text)
                (ERROR
                  (alpha)))))
          (textual_node
            (whitespace))
          (textual_node
            (head_node
              (inline_math
                (text)
                (ERROR
                  (alpha))))))))))

================================================================================
Comment
================================================================================

% lorem ipsum

--------------------------------------------------------------------------------

(source_file
  (head_node
    (comment)))
